Fixed login spacing & updated login/register headers

--- a/algspec-ui/src/styles/register.css
+++ b/algspec-ui/src/styles/register.css
@@ -30,9 +30,9 @@ html {
 }
 
 .form-style {
-  width: 75%;
-  height: 75%;
-  width: 100%
+  
+  height: 50%;
+  width: 100%;
 }
 
 .form-row {
